--- a/src/app/pages/tactical-retail-sales/trs-proposal/component/trs-proposal-product.component.html
+++ b/src/app/pages/tactical-retail-sales/trs-proposal/component/trs-proposal-product.component.html
@@ -65,7 +65,7 @@
       <div fxFlexLayout="row" fxLayoutAlign="start center" fxLayout.lt-md="row" fxLayoutGap="20px"
         fxLayoutGap.lt-md="10px" fxFlex="1 0 auto">
         <button type="button" mat-raised-button color="primary" (click)="submit()"
-          [disabled]="rows.length === 0">{{ls.locale.global.button.send}}</button>
+          [disabled]="rows.length === 0">Simpan</button>
         <button type="button" mat-stroked-button color="primary" (click)="dialogRef.close()"
           [disabled]="uploading">{{ls.locale.global.button.cancel}}</button>
       </div>
