fix alert trs setting

--- a/src/app/pages/tactical-retail-sales/trs-proposal/component/trs-proposal-executor.component.html
+++ b/src/app/pages/tactical-retail-sales/trs-proposal/component/trs-proposal-executor.component.html
@@ -38,31 +38,31 @@
 
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="name" prop="name">
+        <ngx-datatable-column name="Name" prop="name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{row.fullname}}
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="username" prop="username">
+        <ngx-datatable-column name="Username" prop="username">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{row.username}}
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="salespoint" prop="salespoint">
+        <ngx-datatable-column name="Salespoint" prop="salespoint">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{row.salespoint}}
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="district" prop="district">
+        <ngx-datatable-column name="District" prop="district">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{row.district}}
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="territory" prop="territory">
+        <ngx-datatable-column name="Territory" prop="territory">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{row.territory}}
           </ng-template>
