--- a/src/app/pages/tactical-retail-sales/trs-proposal/component/trs-proposal-kecamatan.component.html
+++ b/src/app/pages/tactical-retail-sales/trs-proposal/component/trs-proposal-kecamatan.component.html
@@ -38,15 +38,15 @@
 
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="district" prop="district">
+        <ngx-datatable-column name="Kabupaten" prop="regency">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            {{row.district}}
+            {{row.regency}}
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="territory" prop="territory">
+        <ngx-datatable-column name="Kecamatan" prop="district">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            {{row.territory}}
+            {{row.district}}
           </ng-template>
         </ngx-datatable-column>
 
