--- a/src/app/pages/dte/audience/create/audience-create.component.html
+++ b/src/app/pages/dte/audience/create/audience-create.component.html
@@ -10,8 +10,8 @@
       </div>
       <div class="ayo-middle py-24" fxLayout="column">
         <form autocomplete="off" [formGroup]="formAudience">
-          <div fxLayout="row">
-            <mat-form-field fxFlex="45" class="is-light form-primary">
+          <div fxLayout="column" fxLayoutGap="16px" fxFlex="45">
+            <mat-form-field class="is-light form-primary">
               <input
                 matInput
                 type="text"
@@ -26,6 +26,20 @@
               >
                 {{'dte.audience.text4' | translate }} {{'global.messages.mandatory_text' | translate}}
               </mat-error>
+            </mat-form-field>
+            
+            <mat-form-field class="is-light">
+              <mat-select
+                placeholder="Business Type"
+                formControlName="business_type"
+              > 
+                <mat-option
+                  *ngFor="let item of businessType"
+                  [value]="item.value"
+                >
+                  {{item.name}}
+                </mat-option>
+              </mat-select>
             </mat-form-field>
           </div>
 
@@ -199,20 +213,6 @@
               >
                 {{'dte.trade_program.text3' | translate}} {{'global.messages.mandatory_text' | translate}}
               </mat-error>
-            </mat-form-field>
-
-            <mat-form-field class="is-light">
-              <mat-select
-                placeholder="Business Type"
-                formControlName="business_type"
-              > 
-                <mat-option
-                  *ngFor="let item of businessType"
-                  [value]="item.value"
-                >
-                  {{item.name}}
-                </mat-option>
-              </mat-select>
             </mat-form-field>
           </div>
         </form>
