--- a/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
+++ b/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
@@ -119,7 +119,7 @@
                     [placeholderLabel]="ls.locale.wholesaler.search_bank_name"
                     [noEntriesFoundLabel]="'Tidak ada Nama Bank yang ditemukan'">
                   </ngx-mat-select-search>
-                  <mat-option *ngFor="let item of filteredBanks | async" [value]="item.name">
+                  <mat-option *ngFor="let item of filteredBanks | async" [value]="remaskSelect(item.name)">
                     {{remaskSelect(item.name)}}
                   </mat-option>
                 </mat-select>
