--- a/src/app/pages/popup-notification/edit/popup-notification-edit.component.html
+++ b/src/app/pages/popup-notification/edit/popup-notification-edit.component.html
@@ -242,21 +242,6 @@
             <div class="px-24">
               <div fxLayout="row">
                 <mat-form-field fxFlex="45" class="is-light form-primary">
-                  <mat-select formControlName="is_smoker"
-                    placeholder="{{'iklan_dalam_aplikasi.spanduk_online.text14' | translate}}">
-                    <mat-option *ngFor="let item of listSmoker" [value]="item.value">{{item.name}}</mat-option>
-                  </mat-select>
-                  <mat-error
-                    *ngIf="formPopupGroup.controls['is_smoker'].hasError('required') && formPopupGroup.controls['is_smoker'].touched">
-                    {{'iklan_dalam_aplikasi.spanduk_online.text14' | translate}} {{'global.messages.mandatory_text' | translate}}
-                  </mat-error>
-                </mat-form-field>
-              </div>
-            </div>
-
-            <div class="px-24" *ngIf="formPopupGroup.get('is_smoker').value !== 'yes'">
-              <div fxLayout="row">
-                <mat-form-field fxFlex="45" class="is-light form-primary">
                   <mat-select formControlName="verification"
                     placeholder="{{'iklan_dalam_aplikasi.spanduk_online.text15' | translate}}">
                     <mat-option *ngFor="let item of listJenisKonsumen" [value]="item.value">{{item.name}}</mat-option>
@@ -297,6 +282,17 @@
                   </mat-error>
                 </mat-form-field>
               </div>
+            </div>
+
+            <div class="pb-16 px-24">
+              <div class="pb-8" fxLayout="row" fxLayoutAlign="start center">
+                <strong class="font-size-16">{{'notification.popup_notifikasi.text15' | translate}}</strong>
+              </div>
+              <mat-radio-group formControlName="content_type_new" class="radio-group">
+                <mat-radio-button class="radio-button" *ngFor="let item of listContentTypeNew" [value]="item.value">
+                  {{item.name}}
+                </mat-radio-button>
+              </mat-radio-group>
             </div>
 
             <div class="pb-16 px-24">
